--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -3,4 +3,13 @@
         <meta charset="utf-8">
         <title>Buổi học 1</title>
     </head>
+    <body>
+        <!-- 1 trang web chỉ có 1 tiêu đề 1 H1 -->
+        <h1>Tổng Bí thư Tô Lâm: 'Sắp xếp lại giang sơn là bước đi lịch sử'</h1>
+        <h2>Tiêu đề 2</h2>
+        <h3>Tiêu đề 3</h3>
+        <h4>Tiêu đề 4</h4>
+        <h5>Tiêu đề 5</h5>
+        <h6>Tiêu đề 6</h6>
+    </body>
 </html>
