--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -11,5 +11,14 @@
         <h4>Tiêu đề 4</h4>
         <h5>Tiêu đề 5</h5>
         <h6>Tiêu đề 6</h6>
+
+        <!-- Thẻ đoạn văn: <p> -->
+        <p>
+            Việc sáp nhập tỉnh, thành và tổ chức lại bộ máy là "bước đi lịch sử", đánh dấu giai đoạn phát triển mới trong xây dựng nền hành chính hiện đại, tinh gọn, hiệu lực, hiệu quả, theo Tổng Bí thư Tô Lâm.
+            Phát biểu tại Lễ công bố Nghị quyết của Quốc hội về sáp nhập các địa phương và thành lập tổ chức Đảng cấp tỉnh, sáng 30/6, Tổng Bí thư Tô Lâm nhấn mạnh "Sắp xếp lại giang sơn" là quyết định chiến lược, mang tầm vóc lịch sử, thể hiện tư duy cải cách hành chính mạnh mẽ của Đảng và Nhà nước.
+        </p>
+        <p>Theo ông, TP HCM, Bình Dương và Bà Rịa - Vũng Tàu từ lâu đã là ba cực phát triển lớn của miền Nam. Việc hợp nhất không gian ba tỉnh, hình thành siêu đô thị với vai trò trung tâm tài chính, sản xuất, logistics, đổi mới sáng tạo tầm khu vực và thế giới là một bước tiến chiến lược.</p>
+        <!-- Thẻ xuống dòng: <br> -->
+         <br>Mô hình tổ chức mới sẽ giúp tăng cường tự chủ, linh hoạt trong điều hành, tạo nền tảng thể chế để các đô thị vệ tinh, khu công nghiệp, dịch vụ cảng biển phát huy tiềm năng. "Nhà nước phục vụ sẽ không còn là khẩu hiệu mà trở thành hành động cụ thể, thực chất", Tổng Bí thư nói.
     </body>
 </html>
