Chèn hình ảnh

--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -27,5 +27,7 @@
          <br>Mô hình tổ chức mới sẽ giúp tăng cường tự chủ, linh hoạt trong điều hành, tạo nền tảng thể chế để 
          các đô thị vệ tinh, khu công nghiệp, dịch vụ cảng biển phát huy tiềm năng. "Nhà nước phục vụ sẽ không 
          còn là khẩu hiệu mà trở thành hành động cụ thể, thực chất", Tổng Bí thư nói.
-    </body>
+        <!-- Chèn hình ảnh: <img src="địa chỉ hình ảnh"> -->
+         <img src="https://hoahongsi.com/Upload/cate/dauco4-3673.jpg" alt="Hoa hồng">
+        </body>
 </html>
