Thẻ in nghiêng

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -17,9 +17,14 @@
     <!-- Định dạng văn bản cơ bản -->
      <p align="center">Đây là văn bản</p>
      <p align="right">Đây là văn bản 2</p>
+
      <p>Đây là <b>chữ đậm</b> bằng &lt;b&gt; </p>
      <p>Đây là <strong>chữ đậm nhấn mạnh</strong> bằng thẻ &lt;strong></p>
      <!-- <b> là in đậm, nhưng <strong> là nhấn mạnh -->
+
+    <p>Đây là <i>chữ in nghiêng</i> bằng thẻ &lt;i></p>
+    <p>Đây là <em>chữ in nghiêng nhấm mạnh</em> bằng thẻ &lt;em></p>
+    <!-- <i>, <em> là chữ in nghiêng -->
 </body>
 
 </html>
