--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -8,23 +8,30 @@
 
 <body>
     <!-- Thẻ tiêu đề -->
-     <h1>Đây là tiêu đề cấp 1</h1>
-     <h2>Đây là tiêu đề cấp 2</h2>
-     <h3>Đây là tiêu đề cấp 3</h3>
+    <h1>Đây là tiêu đề cấp 1</h1>
+    <h2>Đây là tiêu đề cấp 2</h2>
+    <h3>Đây là tiêu đề cấp 3</h3>
     <!-- Có 6 cấp tiêu đề. H1 là quan trọng nhất, H6 là ít quan trọng nhất -->
     <!-- H1 chỉ có 1 cái trong 1 trang web -->
 
     <!-- Định dạng văn bản cơ bản -->
-     <p align="center">Đây là văn bản</p>
-     <p align="right">Đây là văn bản 2</p>
+    <p align="center">Đây là văn bản</p>
+    <p align="right">Đây là văn bản 2</p>
 
-     <p>Đây là <b>chữ đậm</b> bằng &lt;b&gt; </p>
-     <p>Đây là <strong>chữ đậm nhấn mạnh</strong> bằng thẻ &lt;strong></p>
-     <!-- <b> là in đậm, nhưng <strong> là nhấn mạnh -->
+    <p>Đây là <b>chữ đậm</b> bằng &lt;b&gt; </p>
+    <p>Đây là <strong>chữ đậm nhấn mạnh</strong> bằng thẻ &lt;strong></p>
+    <!-- <b> là in đậm, nhưng <strong> là nhấn mạnh -->
 
     <p>Đây là <i>chữ in nghiêng</i> bằng thẻ &lt;i></p>
     <p>Đây là <em>chữ in nghiêng nhấm mạnh</em> bằng thẻ &lt;em></p>
     <!-- <i>, <em> là chữ in nghiêng -->
+    
+    <p>Đây là <u>chữ bị gạch chân</u> bằng thẻ &lt;u></p>
+    <!-- Chữ bị gạch chân: <u> -->
+    <p><del>Chữ bị xóa</del>bằng thẻ &lt;del></p>
+    <!-- Chữ bị gạch bỏ: <del> -->
+
+
 </body>
 
 </html>
