--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -29,8 +29,11 @@
     <p>Đây là <u>chữ bị gạch chân</u> bằng thẻ &lt;u></p>
     <!-- Chữ bị gạch chân: <u> -->
     <p><del>Chữ bị xóa</del>bằng thẻ &lt;del></p>
-    <!-- Chữ bị gạch bỏ: <del> -->
+    <!-- Chữ bị gạch bỏ: <del>, <strike> -->
 
+    <!-- Highlight chứ-->
+     <p>Giảm giá <mark>50%</mark> toàn bộ sản phẩm</p>
+     <!-- thẻ <mark> làm nổi bật nội dung, giống bút dạ quang -->
 
 </body>
 
