--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -31,10 +31,16 @@
     <p><del>Chữ bị xóa</del>bằng thẻ &lt;del></p>
     <!-- Chữ bị gạch bỏ: <del>, <strike> -->
 
-    <!-- Highlight chứ-->
+    <!-- Highlight chữ-->
      <p>Giảm giá <mark>50%</mark> toàn bộ sản phẩm</p>
      <!-- thẻ <mark> làm nổi bật nội dung, giống bút dạ quang -->
-
+    
+    <!-- Chỉ số dưới: sub -->
+     H<sub>2</sub>O
+     <!-- Thẻ xuống dòng -->
+     <br> 
+     <!-- Chỉ số trên: sup -->
+     n<sup>2</sup>
 </body>
 
 </html>
