--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -25,22 +25,28 @@
     <p>Đây là <i>chữ in nghiêng</i> bằng thẻ &lt;i></p>
     <p>Đây là <em>chữ in nghiêng nhấm mạnh</em> bằng thẻ &lt;em></p>
     <!-- <i>, <em> là chữ in nghiêng -->
-    
+
     <p>Đây là <u>chữ bị gạch chân</u> bằng thẻ &lt;u></p>
     <!-- Chữ bị gạch chân: <u> -->
     <p><del>Chữ bị xóa</del>bằng thẻ &lt;del></p>
     <!-- Chữ bị gạch bỏ: <del>, <strike> -->
 
     <!-- Highlight chữ-->
-     <p>Giảm giá <mark>50%</mark> toàn bộ sản phẩm</p>
-     <!-- thẻ <mark> làm nổi bật nội dung, giống bút dạ quang -->
+    <p>Giảm giá <mark>50%</mark> toàn bộ sản phẩm</p>
+    <!-- thẻ <mark> làm nổi bật nội dung, giống bút dạ quang -->
+
+    <!-- Chỉ số dưới: <sub> -->
+    H<sub>2</sub>O
+    <!-- Thẻ xuống dòng: <br> -->
+    <br>
+    <!-- Chỉ số trên: <sup> -->
+    n<sup>2</sup>
+
+    <!-- Căn giữa văn bản -->
+    <center>Căn giữa</center>
+    <!-- Lưu ý: không nên dùng vì CSS có nhiều cách căn giữa hơn -->
+
     
-    <!-- Chỉ số dưới: sub -->
-     H<sub>2</sub>O
-     <!-- Thẻ xuống dòng -->
-     <br> 
-     <!-- Chỉ số trên: sup -->
-     n<sup>2</sup>
 </body>
 
 </html>
