Chèn hình ảnh

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -46,7 +46,18 @@
     <center>Căn giữa</center>
     <!-- Lưu ý: không nên dùng vì CSS có nhiều cách căn giữa hơn -->
 
-    
+    <!-- Chèn hình ảnh: img -->
+    <!-- src: đường dẫn hình, alt: văn bản thay thế khi ảnh lỗi, 
+      width: kích thước chiều rộng, height: kích thước chiều cao -->
+
+    <!-- Khi ảnh cùng cấp với file đang code -->
+    <img src="Logo_Trường_Đại_học_FPT.svg.png" alt="Logo FPT" width="200">
+
+    <!-- Khi hình ảnh bên ngoài folder, cùng cấp với folder cha -->
+    <img src="../FPT_Telecom_logo.svg" alt="" width="200">
+
+    <!-- Khi hình ảnh ở folder khác -->
+    <img src="../lesson1/logo-fpt.jpg" alt="" width="200">
 </body>
 
 </html>
