Chèn ảnh từ internet

--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -58,6 +58,9 @@
 
     <!-- Khi hình ảnh ở folder khác -->
     <img src="../lesson1/logo-fpt.jpg" alt="" width="200">
+
+    <!-- Ảnh từ internet -->
+     <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/FPT_Logo_Red.png" alt="" width="200">
 </body>
 
 </html>
