--- a/lesson2/index.html
+++ b/lesson2/index.html
@@ -46,6 +46,7 @@
     <center>Căn giữa</center>
     <!-- Lưu ý: không nên dùng vì CSS có nhiều cách căn giữa hơn -->
 
+    <h2>Chèn hình ảnh</h2>
     <!-- Chèn hình ảnh: img -->
     <!-- src: đường dẫn hình, alt: văn bản thay thế khi ảnh lỗi, 
       width: kích thước chiều rộng, height: kích thước chiều cao -->
@@ -60,7 +61,15 @@
     <img src="../lesson1/logo-fpt.jpg" alt="" width="200">
 
     <!-- Ảnh từ internet -->
-     <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/FPT_Logo_Red.png" alt="" width="200">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/FPT_Logo_Red.png" alt="" width="200">
+
+    <h2>Liên kết</h2>
+    <!-- Thẻ a -->
+    <a href="https://www.google.com/" target="_blank">Truy cập Google</a>
+    <!-- target="_blank": để mở tab mới -->
+    <br>
+    <!-- Mở file khác -->
+    <a href="../lesson1/index.html">Bài 1</a>
 </body>
 
 </html>
