Giải thích các định dạng

--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -8,16 +8,19 @@
     <!-- Cách 2: Nhúng CSS ở thẻ <head> -->
     <style>
         h1 {
+            /* Căn giữa */
             text-align: center;
         }
 
         h2 {
+            /* Màu chữ */
             color: purple;
         }
 
         /* Class Seletor: áp dụng cho mọi phần tử có class = "highlight" */
         .highlight {
             color: purple;
+            /* In đậm chữ */
             font-weight: bold;
         }
     </style>
